--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.racaljk/bc2json -->
+        <dependency>
+            <groupId>com.github.racaljk</groupId>
+            <artifactId>bc2json</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
